# deskspawn

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.ui.config.ts
.agents/: AGENTS.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: block-feature-to-main.yml  ci.yml  dependabot-auto-merge.yml  deploy.yml  release.yml  test.yml
docs/: changelog.md  getting-started.md  installation.md  spec.md
docs/usage/: ai-features.md  projects.md  sidecar.md
public/: _headers
scripts/: build-sidecar.mjs
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/src/: agent.ts  index.ts  mcp-client.ts  models-fetcher.ts  orchestrator.ts  providers.ts  retry.ts  screenshot.ts  server.ts  step-limits.ts  system-prompt.ts  tool-executors.ts  tools.ts  triage.ts  types.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_config.rs  env_check.rs  harness.rs  mod.rs  sidecar.rs  spawn.rs
src-tauri/src/engine/: backup.rs  mod.rs  monitor.rs  security.rs  security_server.rs  staging.rs  template.rs
src-tauri/src/models/: config.rs
src/engine/: mcp-client.test.ts  mcp-client.ts  orchestrator.test.ts  orchestrator.ts  (+13 more)
website/: index.html  package-lock.json  package.json  vite.config.ts
(+126 files in other folders)
