[package]
name = "deskspawn"
version = "0.2.0"
description = "AI-powered Windows native app development platform"
authors = ["DeskSpawn Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "deskspawn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tiny_http = "0.12"

# Cross-platform OS keychain for API key storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# HTTP client for pushing API key to sidecar
ureq = { version = "3", features = ["json"] }
